[gd_scene load_steps=4 format=3 uid="uid://y6rbh7rejxfc"]

[ext_resource type="Theme" path="res://global/ui/themes/main_theme.tres" id="1_k863m"]
[ext_resource type="Script" path="res://main/lobby.gd" id="1_u423x"]
[ext_resource type="Texture2D" uid="uid://db0tqjpju1076" path="res://art/background.webp" id="2_j1egu"]

[node name="Lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( "1_u423x" )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.152941, 0.152941, 0.152941, 1)
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( "2_j1egu" )
ignore_texture_size = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_top = -172.5
offset_right = 500.0
offset_bottom = 172.5
theme = ExtResource( "1_k863m" )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -475.0
offset_top = -161.0
offset_right = 475.0
offset_bottom = 155.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Panel/VBoxContainer"]
offset_right = 950.0
offset_bottom = 86.0
theme_override_font_sizes/font_size = 70
text = "Battleships"
horizontal_alignment = 1
uppercase = true

[node name="Name" type="HBoxContainer" parent="Panel/VBoxContainer"]
offset_top = 90.0
offset_right = 950.0
offset_bottom = 153.0
size_flags_horizontal = 3

[node name="NameLabel" type="Label" parent="Panel/VBoxContainer/Name"]
offset_right = 170.0
offset_bottom = 63.0
rect_min_size = Vector2(170, 0)
text = "Name:"

[node name="NameEdit" type="LineEdit" parent="Panel/VBoxContainer/Name"]
offset_left = 174.0
offset_right = 950.0
offset_bottom = 63.0
size_flags_horizontal = 3
placeholder_text = "[nickname]"

[node name="IP" type="HBoxContainer" parent="Panel/VBoxContainer"]
offset_top = 157.0
offset_right = 950.0
offset_bottom = 220.0

[node name="IPLabel" type="Label" parent="Panel/VBoxContainer/IP"]
offset_right = 170.0
offset_bottom = 63.0
rect_min_size = Vector2(170, 0)
text = "IP:  "

[node name="IPEdit" type="LineEdit" parent="Panel/VBoxContainer/IP"]
offset_left = 174.0
offset_right = 950.0
offset_bottom = 63.0
size_flags_horizontal = 3
placeholder_text = "[server ip to join]"

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer"]
offset_top = 224.0
offset_right = 950.0
offset_bottom = 244.0
rect_min_size = Vector2(0, 20)

[node name="Buttons" type="HBoxContainer" parent="Panel/VBoxContainer"]
offset_top = 248.0
offset_right = 950.0
offset_bottom = 316.0

[node name="CreateServer" type="Button" parent="Panel/VBoxContainer/Buttons"]
offset_right = 473.0
offset_bottom = 68.0
size_flags_horizontal = 3
theme_override_constants/outline_size = 0
text = "CREATE SERVER"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JoinServer" type="Button" parent="Panel/VBoxContainer/Buttons"]
offset_left = 477.0
offset_right = 950.0
offset_bottom = 68.0
rect_min_size = Vector2(378, 0)
size_flags_horizontal = 3
text = "JOIN SERVER"

[connection signal="pressed" from="Panel/VBoxContainer/Buttons/CreateServer" to="." method="_on_create_server_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Buttons/JoinServer" to="." method="_on_join_server_pressed"]
